frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: default
  labels:
    component: web-f
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-f
  template:
    metadata:
      labels:
        component: web-f
    spec:
      containers:
      - name: frontend
        image: lakshya7ghatotkach/lakshya:v1
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
