wrong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrong-deployment
  labels:
    component: web-w
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-w
  template:
    metadata:
      labels:
        component: web-w
    spec:
      containers:
      - name: wrong
        image: lakshya7ghatotkach/lakshya:surprise-1
        ports:
        - containerPort: 80
