backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
    component: web-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
