wrong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrong-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    component: web-w
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
