nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: wrong-service
      port:
        number: 80  
  rules:
  - host: "34.70.33.90.nip.io"
    http:
      paths:
      - pathType: Exact 
        path: /
        backend:
          service:
            name: frontend-service
            port:
              number: 80
